Expand and refine BenchmarkSQL TPC-C guide with detailed content
Co-authored-by: 478390562yx <478390562yx@gmail.com>